# marketsim

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run.sh
marketsim/: __init__.py  cli.py  config.py  engine.py  instruments.py  monitor.py  server.py  storage.py
marketsim/providers/: __init__.py  alpaca.py  base.py  yahoo.py
marketsim/web/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py
