[project]
name = "marketsim"
version = "0.1.0"
description = "A realistic stock market simulator with a MarketWatch-style web GUI and an agent-friendly terminal CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
]

[project.scripts]
marketsim = "marketsim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["marketsim"]

[tool.setuptools.package-data]
marketsim = ["web/*"]
